<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".albunes.view.AlbunesFragment">

    <TextView
        android:id="@+id/textViewSelectUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/seleccione_usuario"
        android:paddingStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spn_autores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectUser" />

    <TextView
        android:id="@+id/textView_cabeceraAlbunes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/listado_lbumes"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_autores" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cabeceraAlbunes">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buscar_por_nombre"
            android:background="@color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_albunes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_num_albumes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_searchView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_albunes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            tools:listitem="@layout/row_album" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/ll_num_albumes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_albumes_listados"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:paddingEnd="10dp"/>

        <TextView
            android:id="@+id/tv_numAlbumes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000"
            android:textSize="16sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_recyclerAlbunes"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@+id/srl_albunes"
        app:layout_constraintEnd_toEndOf="@+id/srl_albunes"
        app:layout_constraintTop_toTopOf="@+id/srl_albunes"
        app:layout_constraintBottom_toBottomOf="@+id/srl_albunes"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_rvAlbum_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_hay_albunes_que_mostrar"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cabeceraAlbunes"/>

    <include
        android:id="@+id/layout_error"
        layout="@layout/error_server_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>