<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".portadas.view.PortadasFragment">

    <TextView
        android:id="@+id/tv_cabecera_spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="10dp"
        android:text="@string/seleccione_usuario"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spn_autores_portadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cabecera_spinner1" />

    <TextView
        android:id="@+id/tv_cabecera_spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="10dp"
        android:text="@string/seleccione_un_album"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_autores_portadas" />

    <Spinner
        android:id="@+id/spn_albunes_portadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cabecera_spinner2" />

    <TextView
        android:id="@+id/textCabeceraPortada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/portadas"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_albunes_portadas" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_portadas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCabeceraPortada"
        app:layout_constraintBottom_toTopOf="@+id/ll_numPortadas">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_portadas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/row_portada"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/ll_numPortadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero_portadas_listadas"
            android:textAlignment="textEnd"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tv_numPortadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_recyclerPortadas"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/srl_portadas"
        app:layout_constraintEnd_toEndOf="@+id/srl_portadas"
        app:layout_constraintBottom_toBottomOf="@+id/srl_portadas"
        app:layout_constraintTop_toTopOf="@+id/srl_portadas"/>

    <TextView
        android:id="@+id/tv_rvPortadas_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_hay_portadas_disponibles"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCabeceraPortada"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        android:id="@+id/layout_error"
        layout="@layout/error_server_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>